--- a/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body_bio.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body_bio.css
@@ -1,7 +1,9 @@
 
 .profile-bio-container {
+    padding-top: 15px;
     padding-right: 35px;
     padding-left: 35px;
+    padding-bottom: 15px;
 }
 
 
